# Prometheus

./: .gitignore  CMakeLists.txt  README.md
.cache/clangd/index/: bullet.cpp.1E7EC71E774ABD60.idx  bullet.hpp.5809518D5F0B258F.idx  cameraFollow.cpp.0558259339CEC9E0.idx  cameraFollow.cpp.A30DF77ECBDB284A.idx  cameraFollow.hpp.1E2423CD02651E17.idx  cameraFollow.hpp.640B10CB81D4C530.idx  common.cpp.12CCB4778523F858.idx  common.cpp.78D8C5A96359CE2B.idx  common.hpp.8EFB6ACB700964A0.idx  common.hpp.DD4798F8A2A6AC32.idx  game.cpp.06892BFE1105B934.idx  game.cpp.3C62EAC5D2D5C66B.idx  game.cpp.CA5DB3D8402EA0A9.idx  game.hpp.1EA2363C855EB1D7.idx  game.hpp.42E806C27E2464E3.idx  game.hpp.A30F00DB614BA138.idx  input.cpp.28FEB0AA8BF41C15.idx  input.cpp.E8870C4B913CC958.idx  input.cpp.F1B9F8C73B344888.idx  input.hpp.4C94ADE49FEB0B3C.idx  input.hpp.77CE9A426A6E2075.idx  input.hpp.9AC1A2B5FDB70BB4.idx  main.cpp.407B8D78B0DEDD4A.idx  main.cpp.C4F22783DB81BF03.idx  player.cpp.4274AB342952751E.idx  player.cpp.E6A55A5C88275585.idx  player.cpp.E79E44041CDF86B9.idx  player.hpp.51937051F09783CF.idx  player.hpp.99F61FB7534242CC.idx  player.hpp.B9D7CC9F80CE9FDD.idx
.github/workflows/: build.yml
assets/: oopygoopy.txt
assets/sprites/: scarygaryploonot.aseprite
include/core/: game.hpp
include/core/input/: input.hpp
include/core/missions/: mission.hpp
include/core/worlds/: world.hpp
include/gameplay/: player.hpp
include/gfx/: cameraFollow.hpp  objectiveIndicator.hpp
src/: main.cpp
src/core/: game.cpp
src/gameplay/: player.cpp
src/gfx/: cameraFollow.cpp  objectiveIndicator.cpp
(+10 files in other folders)
